--- a/Photos/AlbumsAndProfiles.storyboard
+++ b/Photos/AlbumsAndProfiles.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8Vy-5r-m7X">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -322,6 +322,9 @@
                                                 <constraint firstAttribute="bottom" secondItem="QFK-2L-ys9" secondAttribute="bottom" id="dN3-Po-Fy8"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="ptu-2q-YsM" kind="presentation" modalTransitionStyle="crossDissolve" id="kmR-qY-YRf"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="130" id="G7c-Uo-2zX">
                                         <rect key="frame" x="0.0" y="209" width="375" height="130"/>
@@ -390,7 +393,15 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y5W-B9-vcL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4534" y="2008"/>
+            <point key="canvasLocation" x="4308" y="2007"/>
+        </scene>
+        <!--PhotoDetails-->
+        <scene sceneID="rzF-iB-6zc">
+            <objects>
+                <viewControllerPlaceholder storyboardName="PhotoDetails" id="ptu-2q-YsM" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="53q-v8-1iO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5182" y="2006"/>
         </scene>
         <!--Album-->
         <scene sceneID="2dP-vH-Sah">
